<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_Bluesky"
    tools:context=".Activities.User_Register">

    <Button
        android:id="@+id/button4"
        android:layout_width="214dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/sukhumvitset_bold"
        android:text="@string/register_button"
        android:textColor="@color/text_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.148" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/sukhumvitset_bold"
        android:text="@string/title_register"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sukhumvitset_bold"
        android:text="@string/semi_title_register"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/sukhumvitset_bold"
        android:text="@string/build_user"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:background="@drawable/button_style"
        android:ems="10"
        android:fontFamily="@font/sukhumvitset_bold"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_style"
        android:ems="10"
        android:fontFamily="@font/sukhumvitset_bold"
        android:hint="@string/hint_password"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_style"
        android:ems="10"
        android:fontFamily="@font/sukhumvitset_bold"
        android:hint="@string/hint_email"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editText4"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_style"
        android:ems="10"
        android:fontFamily="@font/sukhumvitset_bold"
        android:hint="@string/hint_phone_number"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editText5"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/sukhumvitset_bold"
        android:text="@string/birth_date"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editText6"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>