<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_Bluesky"
    tools:context=".Activities.login.ClinomaniaLogin">


    <TextView
        android:id="@+id/register_textview2"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sukhumvitset_bold"
        android:text="ลงทะเบียน"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/login_button2"
        app:layout_constraintStart_toStartOf="@+id/login_button2"
        app:layout_constraintTop_toBottomOf="@+id/login_button2" />

    <Button
        android:id="@+id/login_button2"
        android:visibility="invisible"
        android:layout_width="270dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/sukhumvitset_bold"
        android:text="เข้าสู่ระบบ"
        android:clickable="true"
        android:textColor="@color/text_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetpassWord" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="270dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/sukhumvitset_bold"
        android:text="เข้าสู่ระบบ"
        android:textColor="@color/text_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.148" />

    <TextView
        android:id="@+id/register_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sukhumvitset_bold"
        android:text="ลงทะเบียน"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/sukhumvitset_bold"
        android:text="เข้าสู่ระบบด้วย"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_textview" />

    <TextView
        android:id="@+id/Mddgard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sukhumvitset_bold"
        android:text="@string/title1"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/Mddgard_wellcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:fontFamily="@font/sukhumvitset_bold"
        android:text="@string/title2"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Mddgard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Mddgard"
        app:layout_constraintTop_toTopOf="@+id/Mddgard" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sukhumvitset_semibold"
        android:text="@string/semi_title1"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/Mddgard_wellcome"
        app:layout_constraintTop_toBottomOf="@+id/Mddgard_wellcome" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sukhumvitset_semibold"
        android:text="@string/semi_title2"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />


    <EditText
        android:id="@+id/editText_userName"
        android:visibility="invisible"
        android:layout_width="270dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_style"
        android:ems="10"
        android:fontFamily="@font/sukhumvitset_bold"
        android:hint="@string/hint_username"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:paddingLeft="15dp"
        android:textColor="@color/text_black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editText_password"
        android:visibility="invisible"
        android:layout_width="270dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_style"
        android:ems="10"
        android:fontFamily="@font/sukhumvitset_bold"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="@color/text_black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/editText_userName"
        app:layout_constraintTop_toBottomOf="@+id/editText_userName" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/forgetpassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sukhumvitset_bold"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editText_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:srcCompat="@drawable/ic_line_login" />


</androidx.constraintlayout.widget.ConstraintLayout>